@@ -12,8 +12,7 @@
     var vm = this,
         sieveCapabilities = $window.sieveCapabilities,
         forwardEnabled = $window.forwardEnabled,
-        vacationEnabled = $window.vacationEnabled,
-        sieveFolderPathAttribute = ($window.sieveFolderEncoding == "UTF-8") ? "name" : "path";
+        vacationEnabled = $window.vacationEnabled;
 
     vm.filter = filter;
     vm.mailboxes = mailboxes;
@@ -50,12 +49,6 @@
 
     //if (vacationEnabled)
     //  vm.methodLabels.vacation = l("Send a vacation message");
-
-    vm.mailboxes = _.map(mailboxes, function(mailbox) {
-      return { level: mailbox.level,
-               name: mailbox.name,
-               path: mailbox[sieveFolderPathAttribute] };
-    });
 
     if (sieveCapabilities.indexOf("reject") > -1)
       vm.methodLabels.reject = l("Send a reject message");
